--- a/config/database.yml
+++ b/config/database.yml
@@ -1,17 +1,6 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
-
 development:
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   database: pagliacci_development
   pool: 5
   username:
@@ -19,7 +8,7 @@ development:
 
 test:
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   database: pagliacci_test
   pool: 5
   username:
@@ -27,7 +16,7 @@ test:
 
 production:
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   database: pagliacci_production
   pool: 5
   password:
