fix strong params issue;

--- a/test/fixtures/toppings.yml
+++ b/test/fixtures/toppings.yml
@@ -11,7 +11,7 @@ green_pepper:
   name: 'green pepper'
 
 black_olives:
-  name: 'black_olives'
+  name: 'black olives'
 
 mozzarella:
   name: 'mozzarella'
