--- a/test/fixtures/menu_pizzas.yml
+++ b/test/fixtures/menu_pizzas.yml
@@ -1,3 +1,3 @@
-veggie_fresh:
-  name: 'Veggie Fresh'
-  description: 'All the veggies'
+brooklyn_bridge:
+  name: 'Broolyn Bridge'
+  description: ''
