--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 development:
   adapter: postgresql
   encoding: utf8
-  database: pagliacci_development
+  host: localhost
   pool: 5
   username:
   password:
@@ -10,6 +10,7 @@ test:
   adapter: postgresql
   encoding: utf8
   database: pagliacci_test
+  host: localhost
   pool: 5
   username:
   password:
@@ -18,5 +19,6 @@ production:
   adapter: postgresql
   encoding: utf8
   database: pagliacci_production
+  host: localhost
   pool: 5
   password:
