--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,7 @@
 development:
   adapter: postgresql
   encoding: utf8
+  database: pagliacci_development
   host: localhost
   pool: 5
   username:
@@ -21,4 +22,5 @@ production:
   database: pagliacci_production
   host: localhost
   pool: 5
+  username:
   password:
