--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -16,3 +16,8 @@ two:
 thomas:
   email: email@example.com
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+
+admin:
+  email: admin@example.com
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+  admin: true
