--- a/test/fixtures/menu_pizzas.yml
+++ b/test/fixtures/menu_pizzas.yml
@@ -7,3 +7,21 @@ veggie_fresh:
   medium_price: 50
   large_price: 00.01
   id: 1
+
+hipster_primo:
+  name: 'Hipster Primo'
+  description: 'Petite bourgeoisie pizza for the pretentious masses'
+  seasonal: true
+  active: false
+  small_price: 10
+  medium_price: 50
+  large_price: 00.01
+
+seasonal_primo:
+  name: 'Seasonal Primo'
+  description: 'Much seasonal. So primo. Wow.'
+  seasonal: true
+  active: true
+  small_price: 10
+  medium_price: 50
+  large_price: 00.01
