--- a/test/fixtures/gelatos.yml
+++ b/test/fixtures/gelatos.yml
@@ -1,8 +1,13 @@
-# Read about fixtures at
-# http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
 coffee:
   name: 'Coffee'
   description: 'Fresh roasted coffee beans with aged whole milk.'
   dairy: true
+  active: true
   id: 1
+
+earwax:
+  name: 'Earwax'
+  description: 'Wax from ears. And cream.'
+  dairy: true
+  seasonal: true
+  active: false
