--- a/test/fixtures/sizes.yml
+++ b/test/fixtures/sizes.yml
@@ -1,14 +1,14 @@
 small_caesar:
   name: Small
   price: 5.49
-  salad: caesar
+  item: caesar
 
 large_caesar:
   name: Large
   price: 8.49
-  salad: caesar
+  item: caesar
 
 party_caesar:
   name: Party
   price: 15.99
-  salad: caesar
+  item: caesar
