--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 rvm:
 - 2.2.2
-before_script: bundle exec rake db:create
+before_script: bundle exec rake db:setup
 deploy:
   provider: heroku
   api_key:
