--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,18 +1,3 @@
-# Read about fixtures at
-# http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one:
-  email: alice@gmail.com
-# column: value
-#
-two:
-  email: bob@example.com
-#  column: value
-
 thomas:
   email: email@example.com
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
@@ -21,3 +6,7 @@ admin:
   email: admin@example.com
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
   admin: true
+
+customer:
+  email: customer@example.com
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
